add some new manifest variations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,100 +1,49 @@
 [
-  [{ "title": "Guides", "icon": "home" }, "/"],
+  [{ "title": "Home", "icon": "home" }, "/"],
+
+  [{ "title": "Getting Started", "icon": "home" }, "/#TODO"],
+  [{ "title": "Guides", "icon": "home" }, "/#TODO"],
+  [{ "title": "UI Components", "icon": "home" }, "/#TODO"],
+
   "---",
-  
-  
-  "# Configuring your app",
+  "# Clerk SDKs",
+  [{ "title": "Next.js", "icon": "nextjs" }, "/#TODO"],
+  [{ "title": "React", "icon": "react" }, "/#TODO"],
+  [{ "title": "Javascript", "icon": "javascript" }, "/#TODO"],
+  [{ "title": "Express", "icon": "express" }, "/#TODO"],
+  [{ "title": "Node.js", "icon": "node" }, "/#TODO"],
+  [{ "title": "Remix", "icon": "remix" }, "/#TODO"],
+  [{ "title": "Go", "icon": "go" }, "/#TODO"],
+  [{ "title": "Gatsby", "icon": "gatsby" }, "/#TODO"],
+  [{ "title": "Ruby / Rails", "icon": "ruby" }, "/#TODO"],
   [
     {
-      "title": "Authentication Strategies", "icon": "react", "root": "references/react"
+      "title": "Community SDKs",
+      "icon": "book-open",
+      "root": "references/ruby"
     },
     [
-      ["Username and Password", "/#TODO"],
-      [
-        { "title": "Social Connections", "icon": "react", "root": "references/react" },
-        [
-          ["Overview", "/#TODO"],
-          ["Browse all 25 connections", "/#TODO"]
-        ]
-      ],
-      ["Passwordless", "/#TODO"],
-      ["Multi-factor Authentication (MFA)", "/#TODO"],
-      ["SAML / Enterprise Connections", "/#TODO"]
+      [{ "title": "Hono", "icon": "hono" }, "/#TODO"],
+      [{ "title": "Vue", "icon": "vue" }, "/#TODO"],
+      [{ "title": "Svelte", "icon": "svelte" }, "/#TODO"],
+      [{ "title": "Elysia", "icon": "elysia" }, "/#TODO"],
+      [{ "title": "Rust", "icon": "rusy" }, "/#TODO"],
+      [{ "title": "C#", "icon": "csharp" }, "/#TODO"],
+      [{ "title": "Redwood", "icon": "redwood" }, "/#TODO"]
     ]
   ],
 
+  "# How Clerk Works",
+  ["Integrating Clerk", "/core-concepts/integrating-clerk"],
+  ["Users", "/core-concepts/users"],
+  ["Organizations", "/core-concepts/organizations"],
+  ["Session Management", "/core-concepts/session-management"],
+  ["Client Handshake", "/core-concepts/client-handshake"],
+  ["Security at Clerk", "/core-concepts/security-at-clerk"],
+  ["System Limits", "/core-concepts/system-limits"],
 
-  [
-    { "title": "Customizing your app", "icon": "react", "root": "references/react" },
-    [
-      ["UI Customization", "/#TODO"],
-      ["Clerk Account Portal", "/#TODO"],
-      ["Email and SMS Templates", "/#TODO"],
-      ["Localization", "/#TODO"]
-    ]
-  ],
-  ["Session Token Customization", "/#TODO"],
-  ["Syncing user data via webhooks", "/#TODO"],
-
-
-  "# Securing your app",
-  [
-    { "title": "Backend Requests", "icon": "react", "root": "references/react" },
-    [
-      ["Authenticating requests to your backend", "/#TODO"],
-      ["JWT Templates", "/#TODO"]
-    ]
-  ],
-  ["Roles and Permissions", "/#TODO"],
-  ["Restricting access", "/#TODO"],
-  ["Bot detection", "/#TODO"],
-  ["Banning users", "/#TODO"],
-  ["Prevent brute force attacks", "/#TODO"],
-
-
-  "# Managing your Users",
-  ["Managing User metadata", "/#TODO"],
-  ["Managing Organization metadata", "/#TODO"],
-
-  "# Development",
-
-  ["Deploy to Production", "/#TODO"],
-  ["Testing with Clerk", "/#TODO"],
-  ["Managing Environments", "/#TODO"],
-  [
-    { "title": "Migrating your data", "icon": "react", "root": "references/react" },
-    [
-      ["Migrate to Clerk", "/#TODO"],
-      ["Migrate from Auth0", "/#TODO"],
-      ["Migrate from Supabase", "/#TODO"],
-      ["Migrate from Auth.js", "/#TODO"],
-      ["Exporting user data", "/#TODO"]
-    ]
-  ],
-  ["Upgrade Guides", "/#TODO"],
-  ["Troubleshooting", "/#TODO"],
-
-
-  "# Clerk Dashboard",
+  "# API Reference",
   ["Overview", "/#TODO"],
-  [
-    { "title": "Account Portal", "icon": "react", "root": "references/react" },
-    [
-      ["Set up your Account Portal", "/#TODO"],
-      ["Customizing your Account Portal", "/#TODO"]
-    ]
-  ],
-  [
-    { "title": "DNS & Domains", "icon": "react", "root": "references/react" },
-    [
-      ["Managing Domains", "/#TODO"],
-      ["Configuring Satellite Domains", "/#TODO"],
-      ["Proxying the Frontend API", "/#TODO"]
-    ]
-  ],
-  ["Plans & Billing", "/#TODO"],
-
-
-  "# From scratch",
-  ["Rebuilding existing Clerk flows", "/#TODO"]
+  ["Backend API", "/reference/backend-api"],
+  ["Frontend API", "/reference/frontend-api/"]
 ]
