consolidate js createorg reference to component reference

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -514,20 +514,16 @@
             "/references/javascript/clerk/organization-switcher"
           ],
           [
-            "CreateOrganization",
-            "/references/javascript/clerk/create-organization"
-          ],
-          [
-            "OrganizationMethods",
+            "Organization methods",
             "/references/javascript/clerk/organization-methods"
           ],
-          ["RedirectMethods", "/references/javascript/clerk/redirect-methods"],
+          ["Redirect methods", "/references/javascript/clerk/redirect-methods"],
           ["BuildURLs", "/references/javascript/clerk/build-urls"],
           [
-            "Handle Navigation",
+            "Handle navigation",
             "/references/javascript/clerk/handle-navigation"
           ],
-          ["Session Methods", "/references/javascript/clerk/session-methods"]
+          ["Session methods", "/references/javascript/clerk/session-methods"]
         ]
       ],
       [
