--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -811,6 +811,7 @@
           ["getCount()", "/references/backend/user/get-count"],
           ["createUser()", "/references/backend/user/create-user"],
           ["updateUser()", "/references/backend/user/update-user"],
+          ["updateUserMetadata()", "/references/backend/user/update-user-metadata"],
           ["deleteUser()", "/references/backend/user/delete-user"],
           ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"]
         ]
@@ -956,6 +957,10 @@
           [
             "PaginatedResourceResponse",
             "/references/backend/types/paginated-resource-response"
+          ],
+          [
+            "Backend User object",
+            "/references/backend/types/backend-user"
           ]
         ]
       ]
