Add updateUserMetadata() to backend references (#775)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -807,6 +807,7 @@
           ["getCount()", "/references/backend/user/get-count"],
           ["createUser()", "/references/backend/user/create-user"],
           ["updateUser()", "/references/backend/user/update-user"],
+          ["updateUserMetadata()", "/references/backend/user/update-user-metadata"],
           ["deleteUser()", "/references/backend/user/delete-user"],
           ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"]
         ]
@@ -952,6 +953,10 @@
           [
             "PaginatedResourceResponse",
             "/references/backend/types/paginated-resource-response"
+          ],
+          [
+            "Backend User object",
+            "/references/backend/types/backend-user"
           ]
         ]
       ]
