--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -149,7 +149,7 @@
       ["Same-Origin Requests", "/backend-requests/making/same-origin"],
       ["Cross-Origin Requests", "/backend-requests/making/cross-origin"],
       [
-        "Session token customization",
+        "Customize your session token",
         "/backend-requests/making/custom-session-token"
       ],
       ["JWT Templates", "/backend-requests/making/jwt-templates"],
