Structure each SAML integration with new guide style

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -315,7 +315,11 @@
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
       "# Analytics",
-      ["Google Analytics", "/integrations/analytics/google-analytics"]
+      ["Google Analytics", "/integrations/analytics/google-analytics"],
+      "# SAML",
+      ["Azure", "/integrations/saml/azure"],
+      ["Okta", "/integrations/saml/okta"],
+      ["Google", "/integrations/saml/google"]
     ]
   ],
   [
