add clerk logo to sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -708,7 +708,7 @@
     ]
   ],
   [
-    { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
+    { "title": "Backend SDK", "icon": "clerk", "root": "/references/backend" },
     [
       ["Overview", "/references/backend/overview"],
       [
