Initial images and descriptions - 80% some steps are not done.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -317,8 +317,8 @@
       ["Google Analytics", "/integrations/analytics/google-analytics"],
       "# SAML",
       ["Azure", "/integrations/saml/azure"],
-      ["Okta", "/integrations/saml/okta"],
-      ["Google", "/integrations/saml/google"]
+      ["Google", "/integrations/saml/google"],
+      ["Okta", "/integrations/saml/okta"]
     ]
   ],
   [
