consolidate sign-in-options and sign-up-options

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -46,8 +46,7 @@
     [
       ["Overview", "/authentication/overview"],
       "# Configuration",
-      ["Sign-up options", "/authentication/configuration/sign-up-options"],
-      ["Sign-in options", "/authentication/configuration/sign-in-options"],
+      ["Sign-in and sign-up options", "/authentication/configuration/sign-in-sign-up-options"],
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Restrictions", "/authentication/configuration/restrictions"],
