Move to Authentications under Social Connections

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -90,7 +90,11 @@
           ["X/Twitter v2", "/authentication/social-connections/x-twitter"],
           ["Xero", "/authentication/social-connections/xero/"]
         ]
-      ]
+      ],
+      "# SAML",
+      ["Azure", "/authentication/saml/azure"],
+      ["Google", "/authentication/saml/google"],
+      ["Okta", "/authentication/saml/okta"]
     ]
   ],
   [
@@ -314,11 +318,7 @@
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
       "# Analytics",
-      ["Google Analytics", "/integrations/analytics/google-analytics"],
-      "# SAML",
-      ["Azure", "/integrations/saml/azure"],
-      ["Google", "/integrations/saml/google"],
-      ["Okta", "/integrations/saml/okta"]
+      ["Google Analytics", "/integrations/analytics/google-analytics"]
     ]
   ],
   [
