--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -637,8 +637,7 @@
           ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
-          ["OAuthProvider", "/references/javascript/types/oauth-provider"],
-          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
+          ["OAuthProvider and OAuthStrategy", "/references/javascript/types/oauth"],
           ["ClerkPaginatedResponse", "/references/javascript/types/clerk-paginated-response"],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
