--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -473,7 +473,10 @@
       ["Auth Object", "/references/nextjs/auth-object"],
       ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# Deprecated",
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"],
+      "# Demo Repositories",
+      ["App Router Demo Repo", "https://github.com/clerk/clerk-nextjs-demo-app-router"],
+      ["Pages Router Demo Repo", "https://github.com/clerk/clerk-nextjs-demo-pages-router"]
     ]
   ],
   [
