add working examples to JS TOTP methods reference

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -522,12 +522,12 @@
         { "title": "User" },
         [
           ["User", "/references/javascript/user/user"],
-          ["Time-based OTP", "/references/javascript/user/totp"],
+          ["TOTP methods", "/references/javascript/user/totp"],
           [
-            "Password Management",
+            "Password management methods",
             "/references/javascript/user/password-management"
           ],
-          ["Create Metadata", "/references/javascript/user/create-metadata"]
+          ["Create metadata methods", "/references/javascript/user/create-metadata"]
         ]
       ],
       [
