sign-in-sign-up --> sign-up-sign-in for consistency

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -46,7 +46,7 @@
     [
       ["Overview", "/authentication/overview"],
       "# Configuration",
-      ["Sign-in and sign-up options", "/authentication/configuration/sign-in-sign-up-options"],
+      ["Sign-up and sign-in options", "/authentication/configuration/sign-u[-sign-in-options"],
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Restrictions", "/authentication/configuration/restrictions"],
