update page name in the sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -637,7 +637,7 @@
           ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
-          ["OAuthProvider and OAuthStrategy", "/references/javascript/types/oauth"],
+          ["OAuth types", "/references/javascript/types/oauth"],
           ["ClerkPaginatedResponse", "/references/javascript/types/clerk-paginated-response"],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
