DOCS-5910 add working examples to JS create-metadata reference (#815)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -640,8 +640,7 @@
           ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
-          ["OAuthProvider", "/references/javascript/types/oauth-provider"],
-          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
+          ["OAuth types", "/references/javascript/types/oauth"],
           ["ClerkPaginatedResponse", "/references/javascript/types/clerk-paginated-response"],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
