--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -50,7 +50,6 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Restrictions", "/authentication/configuration/restrictions"],
-      ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
       ["<SignIn />", "https://clerk.com/docs/components/authentication/sign-in"],
       ["<SignUp />", "https://clerk.com/docs/components/authentication/sign-up"],
@@ -90,7 +89,9 @@
           ["X/Twitter v2", "/authentication/social-connections/x-twitter"],
           ["Xero", "/authentication/social-connections/xero/"]
         ]
-      ]
+      ],
+      "# SAML",
+      ["Overview", "/authentication/saml/overview"]
     ]
   ],
   [
