address code review suggestions

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -521,7 +521,7 @@
       [
         { "title": "User" },
         [
-          ["User", "/references/javascript/user/user"],
+          ["User object", "/references/javascript/user/user"],
           ["TOTP methods", "/references/javascript/user/totp"],
           [
             "Password management methods",
