check for active organization in code examples

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -536,7 +536,7 @@
       [
         { "title": "Organization" },
         [
-          ["Organization", "/references/javascript/organization/organization"],
+          ["Organization object", "/references/javascript/organization/organization"],
           ["Members", "/references/javascript/organization/members"],
           ["Invitations", "/references/javascript/organization/invitations"],
           ["Domains", "/references/javascript/organization/domains"],
