update user page name in sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -504,7 +504,7 @@
       [
         { "title": "Clerk" },
         [
-          ["Clerk", "/references/javascript/clerk/clerk"],
+          ["Clerk class", "/references/javascript/clerk/clerk"],
           [
             "Organization methods",
             "/references/javascript/clerk/organization-methods"
