--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -508,7 +508,7 @@
       [
         { "title": "Clerk" },
         [
-          ["Clerk", "/references/javascript/clerk/clerk"],
+          ["Clerk class", "/references/javascript/clerk/clerk"],
           [
             "Organization methods",
             "/references/javascript/clerk/organization-methods"
@@ -525,13 +525,13 @@
       [
         { "title": "User" },
         [
-          ["User", "/references/javascript/user/user"],
-          ["Time-based OTP", "/references/javascript/user/totp"],
+          ["User object", "/references/javascript/user/user"],
+          ["TOTP methods", "/references/javascript/user/totp"],
           [
-            "Password Management",
+            "Password management methods",
             "/references/javascript/user/password-management"
           ],
-          ["Create Metadata", "/references/javascript/user/create-metadata"]
+          ["Create metadata methods", "/references/javascript/user/create-metadata"]
         ]
       ],
       [
