DOCS-5937 add comprehensive example to the JS /organization/members reference (#823)
Co-authored-by: Shaquil Hansford <liuqahs15@gmail.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -538,10 +538,10 @@
         { "title": "Organization" },
         [
           ["Organization", "/references/javascript/organization/organization"],
-          ["Members", "/references/javascript/organization/members"],
-          ["Invitations", "/references/javascript/organization/invitations"],
-          ["Domains", "/references/javascript/organization/domains"],
-          ["Membership Requests", "/references/javascript/organization/membership-request"]
+          ["Membership methods", "/references/javascript/organization/members"],
+          ["Invitation methods", "/references/javascript/organization/invitations"],
+          ["Domain methods", "/references/javascript/organization/domains"],
+          ["Membership request methods", "/references/javascript/organization/membership-request"]
         ]
       ],
       [
