DOCS-5932 add working examples to JS Organization reference (#822)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -537,7 +537,7 @@
       [
         { "title": "Organization" },
         [
-          ["Organization", "/references/javascript/organization/organization"],
+          ["Organization objects", "/references/javascript/organization/organization"],
           ["Membership methods", "/references/javascript/organization/members"],
           ["Invitation methods", "/references/javascript/organization/invitations"],
           ["Domain methods", "/references/javascript/organization/domains"],
