add docs for transferring app ownership

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -397,6 +397,7 @@
       ["Overview", "/troubleshooting/overview"],
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
       ["Script Loading", "/troubleshooting/script-loading"],
+      ["Transferring your App", "/troubleshooting/transferring-your-app"],
       "# Help & Support",
       ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
       ["Community Discord", "https://clerk.com/discord"],
