--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,6 +30,7 @@
     },
     [
       ["Overview", "/guides/overview"],
+      ["Transferring ownership of your App", "/guides/transferring-your-app"],
       ["Use image optimization to improve app performance", "/guides/image-optimization/imageurl-image-optimization"],
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
       ["Hide Personal Accounts and force organizations", "/guides/force-organizations"],
@@ -397,7 +398,6 @@
       ["Overview", "/troubleshooting/overview"],
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
       ["Script Loading", "/troubleshooting/script-loading"],
-      ["Transferring your App", "/troubleshooting/transferring-your-app"],
       "# Help & Support",
       ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
       ["Community Discord", "https://clerk.com/discord"],
