--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,6 +30,7 @@
     },
     [
       ["Overview", "/guides/overview"],
+      ["Transferring ownership of your App", "/guides/transferring-your-app"],
       ["Use image optimization to improve app performance", "/guides/image-optimization/imageurl-image-optimization"],
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
       ["Hide Personal Accounts and force organizations", "/guides/force-organizations"],
