SAML and Account linking
Introduce a new section that explains how SAML and Account linking works

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -92,7 +92,8 @@
         ]
       ],
       "# SAML",
-      ["Overview", "/authentication/saml/overview"]
+      ["Overview", "/authentication/saml/overview"],
+      ["Account linking", "/authentication/saml/account-linking"]
     ]
   ],
   [
