feat: Add Astro sdk reference

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -956,6 +956,17 @@
       ["C#", "https://github.com/Hawxy/Clerk.Net"]
     ]
   ],
+  [
+    {
+      "title": "Astro",
+      "icon": "astro",
+      "root": "references/astro",
+      "tag": "Community"
+    },
+    [
+      ["Astro", "https://github.com/panteliselef/astro-with-clerk-auth/blob/main/packages/astro-clerk-auth/README.md"]
+    ]
+  ],
   "# API References",
   ["Backend API", "/reference/backend-api"],
   ["Frontend API", "/reference/frontend-api/"]
