apply code review suggestions

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -636,6 +636,8 @@
           ["PublicUserData", "/references/javascript/types/public-user-data"],
           ["SessionStatus", "/references/javascript/types/session-status"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
+          ["SignInFirstFactor", "/references/javascript/types/sign-in-first-factor"],
+          ["SignInSecondFactor", "/references/javascript/types/sign-in-second-factor"],
           ["SignInRedirectOptions", "/references/javascript/types/sign-in-redirect-options"],
           ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
           ["SignInInitialValues", "/references/javascript/types/sign-in-initial-values"],
