--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -92,6 +92,7 @@
         ]
       ],
       "# SAML",
+      ["Overview", "/authentication/saml/overview"],
       ["Azure", "/authentication/saml/azure"],
       ["Google", "/authentication/saml/google"],
       ["Okta", "/authentication/saml/okta"]
