SAML SP-initiated and IdP-initiated flows
Introduce a new page that explains how the two different authentication
flows, SP-initiated and IdP-initiated, work and their differences

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -93,6 +93,7 @@
       ],
       "# SAML",
       ["Overview", "/authentication/saml/overview"],
+      ["Authentication flows", "/authentication/saml/authentication-flows"],
       ["Account linking", "/authentication/saml/account-linking"]
     ]
   ],
