--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -93,6 +93,9 @@
       ],
       "# SAML",
       ["Overview", "/authentication/saml/overview"],
+      ["Azure", "/authentication/saml/azure"],
+      ["Google", "/authentication/saml/google"],
+      ["Okta", "/authentication/saml/okta"],
       ["Authentication flows", "/authentication/saml/authentication-flows"],
       ["Account linking", "/authentication/saml/account-linking"]
     ]
