add custom provider as option for saml sso

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -97,7 +97,8 @@
       ["Account linking", "/authentication/saml/account-linking"],
       ["Azure", "/authentication/saml/azure"],
       ["Google", "/authentication/saml/google"],
-      ["Okta", "/authentication/saml/okta"]
+      ["Okta", "/authentication/saml/okta"],
+      ["Custom provider", "/authentication/saml/custom-provider"]
     ]
   ],
   [
