move verified domains out of custom flows

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -122,6 +122,7 @@
     [
       ["Overview", "/organizations/overview"],
       ["Roles and permissions", "/organizations/roles-permissions"],
+      ["Verified domains", "/organizations/verified-domains"],
       "# Prebuilt Components",
       ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
       ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
@@ -139,8 +140,7 @@
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
       ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Create a custom organization switcher", "/organizations/custom-organization-switcher"],
-      ["Verified domains", "/organizations/verified-domains"]
+      ["Create a custom organization switcher", "/organizations/custom-organization-switcher"]
     ]
   ],
   [
