change name of page in sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -49,7 +49,7 @@
       "# Configuration",
       ["Sign-up and sign-in options", "/authentication/configuration/sign-up-sign-in-options"],
       ["Session options", "/authentication/configuration/session-options"],
-      ["Email & SMS options", "/authentication/configuration/email-sms-templates"],
+      ["Email & SMS templates", "/authentication/configuration/email-sms-templates"],
       ["Restrictions", "/authentication/configuration/restrictions"],
       "# Prebuilt Components",
       ["<SignIn />", "https://clerk.com/docs/components/authentication/sign-in"],
