fix typo in sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -543,7 +543,7 @@
       [
         { "title": "Organization" },
         [
-          ["Organization objects", "/references/javascript/organization/organization"],
+          ["Organization object", "/references/javascript/organization/organization"],
           ["Membership methods", "/references/javascript/organization/members"],
           ["Invitation methods", "/references/javascript/organization/invitations"],
           ["Domain methods", "/references/javascript/organization/domains"],
