--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,6 +30,7 @@
     },
     [
       ["Overview", "/guides/overview"],
+      ["How to Add an Onboarding Flow for your Application", "/guides/add-onboarding-flow"],
       ["Transferring ownership of your App", "/guides/transferring-your-app"],
       ["Use image optimization to improve app performance", "/guides/image-optimization/imageurl-image-optimization"],
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
