Initial elements docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -304,6 +304,28 @@
       ["Error handling", "/custom-flows/error-handling"]
     ]
   ],
+  [
+    {
+      "title": "Elements",
+      "icon": "rectangle-group",
+      "root": "elements"
+    },
+    [
+      ["Overview", "/elements/overview"],
+      ["Getting started", "/elements/getting-started"],
+      "# Guides",
+      ["Build a sign-up flow", "/elements/guides/build-sign-up"],
+      ["Build a sign-in flow", "/elements/guides/build-sign-in"],
+      ["Styling", "/elements/guides/styling"],
+      "# Examples",
+      ["Sign-up", "/elements/examples/sign-up"],
+      ["Sign-in", "/elements/examples/sign-in"],
+      "# Component Reference",
+      ["Common", "/elements/reference/common"],
+      ["Sign-up", "/elements/reference/sign-up"],
+      ["Sign-in", "/elements/reference/sign-in"]
+    ]
+  ],
   "---",
   [
     { "title": "Integrations", "icon": "puzzle", "root": "integrations" },
