Added onboarding content from blog post -- missing images for now (#878)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,6 +30,7 @@
     },
     [
       ["Overview", "/guides/overview"],
+      ["Add custom onboarding to your authentication flow", "/guides/add-onboarding-flow"],
       ["Transferring ownership of your App", "/guides/transferring-your-app"],
       ["Use image optimization to improve app performance", "/guides/image-optimization/imageurl-image-optimization"],
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
